--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,13 @@ cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features 
     "libcosmic",
     "once_cell",
 ] }
+i18n-embed = { version = "0.14.1", features = [
+    "fluent-system",
+    "desktop-requester",
+] }
+i18n-embed-fl = "0.8"
+rust-embed = "8.3.0"
+once_cell = "1.19.0"
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic"
